# RAprogramm_rust-prod-diff-checker

./: .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  Cargo.toml  README.md  REUSE.toml  action.yml  codecov.yml
.config/: nextest.toml
.github/workflows/: ci.yml  dependabot-automerge.yml  example.yml  release.yml
.reuse/: dep5
src/: analysis.rs  classifier.rs  config.rs  error.rs  git.rs  output.rs  types.rs
src/analysis/: ast_visitor.rs  extractor.rs  mapper.rs
src/classifier/: attr_classifier.rs  path_classifier.rs  rules.rs
src/git/: diff_parser.rs  hunk.rs
src/output/: comment.rs  formatter.rs  github.rs  json.rs
src/types/: change.rs  scope.rs  semantic_unit.rs
tests/: config_test.rs  edge_cases.rs  integration.rs  property.rs
