[package]
name = "rust-diff-analyzer"
version = "0.1.0"
edition = "2024"
authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]
description = "Semantic analyzer for Rust PR diffs that distinguishes production code from test code"
license = "MIT"
repository = "https://github.com/RAprogramm/rust-diff-analyzer"
keywords = ["rust", "diff", "analyzer", "github-actions", "code-review"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
syn = { version = "2", features = ["full", "parsing", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
similar = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "rust-diff-analyzer"
path = "src/bin/main.rs"
